--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+/* rubik-regular - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/rubik-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('./fonts/rubik-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/rubik-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/rubik-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/rubik-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/rubik-v14-latin-regular.svg#Rubik') format('svg'); /* Legacy iOS */
+}
+/* rubik-500 - latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/rubik-v14-latin-500.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('./fonts/rubik-v14-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/rubik-v14-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/rubik-v14-latin-500.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/rubik-v14-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/rubik-v14-latin-500.svg#Rubik') format('svg'); /* Legacy iOS */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* open-sans-regular - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/open-sans-v26-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('./fonts/open-sans-v26-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/open-sans-v26-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/open-sans-v26-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/open-sans-v26-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/open-sans-v26-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
+/* open-sans-600 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./fonts/open-sans-v26-latin-600.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('./fonts/open-sans-v26-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./fonts/open-sans-v26-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/open-sans-v26-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('./fonts/open-sans-v26-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./fonts/open-sans-v26-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+body {
+  font-family: 'Rubik', sans-serif;
+  
+  /* overflow: hidden; */
+  /* line-height: 0; */
+}
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #ffffff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-thumb {
+  background-color: #EBEEF1;
+  border-radius: 10px;
 }
